--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
 		<div class="container">
 			<div class="row name-title-company">
 				<div class="col is-6">
-					<p class="text-name">Kurt Eades</p>
-					<p class="text-title-company">Senior Logistics Analyst</p>
-					<p class="text-title-company">Business Operations</p>
+					<p class="text-name">Heather Woods</p>
+					<p class="text-title-company">General Manager</p>
+					<p class="text-title-company">Corks Wine & Charcuterie</p>
 				</div>
 				<div class="col">
-					<img src="assets/CANA-Logo.png" alt="Company Logo">
+					<img src="assets/Corks.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:keades@canallc.com">
+		<a href="mailto:hswoods98@gmail.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/email icon.jpg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">keades@canallc.com</p>
+						<p class="text-detail">hswoods98@gmail.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:2298813596">
+		<a href="tel:2293389344">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/phone icon.png" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(229) 881-3596</p>
+						<p class="text-detail">(229) 338-9344</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,14 +73,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://canallc.com">
+		<a href="https://corksalbany.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/website icon4.png" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">canallc.com</p>
+						<p class="text-detail">corksalbany.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -91,15 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com/maps/place/7371+Atlas+Walk+Way,+Gainesville,+VA+20155/@38.7958118,-77.6092077,17z/
-				data=!3m1!4b1!4m5!3m4!1s0x89b6664d3e2b5c7d:0xee2f3b1bd399ac76!8m2!3d38.7958118!4d-77.6092077">
+		<a href="https://www.google.com/maps/place/https://www.google.com/maps/place/Corks+Wine+%26+Charcuterie/@31.6183586,-84.2238388,15z/data=!4m5!3m4!1s0x0:0xe9710c5173c4e3f1!8m2!3d31.6183586!4d-84.2238388">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/locationicon2.png" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">7371 Atlas Walk Way, Gainesville, Virginia, 20155</p>
+						<p class="text-detail">2700 Dawson Rd, Suite #5, Albany, GA 31707</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
